[package]
name = "xml2db"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41" }
futures = { version = "0.3.31" }
http = { version = "1.3.1" }
quick-xml = { version = "0.37.5" }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql", "macros", "chrono"] }
tokio = { version = "1.45.1", features = ["full"] }
